# ChangeLog for app-emulation/qemu-guest-agent
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-guest-agent/ChangeLog,v 1.18 2014/10/26 08:37:09 vapier Exp $

*qemu-guest-agent-2.1.2 (26 Oct 2014)

  26 Oct 2014; Mike Frysinger <vapier@gentoo.org>
  +qemu-guest-agent-2.1.2.ebuild:
  Version bump #526878 by Thomas Stein.

*qemu-guest-agent-2.0.0 (18 May 2014)

  18 May 2014; Mike Frysinger <vapier@gentoo.org>
  +qemu-guest-agent-2.0.0.ebuild:
  Version bump #488968 by Thomas Stein.

  18 May 2014; Mike Frysinger <vapier@gentoo.org> files/qemu-ga-systemd.udev:
  Fix typo in udev rule #510558 by Alexander Tsoy.

*qemu-guest-agent-1.5.2-r2 (12 Sep 2013)
*qemu-guest-agent-1.6.0-r1 (12 Sep 2013)

  12 Sep 2013; Tiziano Müller <dev-zero@gentoo.org>
  +qemu-guest-agent-1.5.2-r2.ebuild, +qemu-guest-agent-1.6.0-r1.ebuild,
  -qemu-guest-agent-1.5.2-r1.ebuild, -qemu-guest-agent-1.6.0.ebuild:
  Add implicit dependency on sysvinit >=2.88-r5 since qemu-ga calls shutdown
  with '-P'/'-H' but without '-h' and this got added in 2.88-r5

  05 Sep 2013; Michał Górny <mgorny@gentoo.org>
  qemu-guest-agent-1.5.2-r1.ebuild, qemu-guest-agent-1.6.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*qemu-guest-agent-1.6.0 (16 Aug 2013)

  16 Aug 2013; Doug Goldstein <cardoe@gentoo.org>
  +qemu-guest-agent-1.6.0.ebuild:
  Version bump

*qemu-guest-agent-1.5.2-r1 (11 Aug 2013)

  11 Aug 2013; Doug Goldstein <cardoe@gentoo.org> +files/qemu-ga.conf-r1,
  +files/qemu-ga.init-r1, +qemu-guest-agent-1.5.2-r1.ebuild,
  -files/qemu-ga.conf, -files/qemu-ga.init, -qemu-guest-agent-1.2.0.ebuild,
  -qemu-guest-agent-1.4.2.ebuild, -qemu-guest-agent-1.5.2.ebuild:
  Fix issue with paths being prefixed with /usr/local. Correctly move everything
  to /run from /var/run. Fix issue with daemon not starting up correctly due to
  missing options. Add GA_OPTIONS to init script config for other options like a