@@ -12,26 +12,28 @@ DIST qemu-1.6.0-49bdd50f.tar.xz 3132 SHA256 b722c117c3998b90d63a01558ab009a40df6
 DIST qemu-1.6.0.tar.bz2 12040196 SHA256 3132e58ada26d43b6924e8c2f07db80aa1e5022f3dcf03dee7d8bb9194b2cb48 SHA512 18dfc35eeb6fa48c9e73483c905885ae98191cf76acc00c568d57c6973d912f8bea4de24e85f55308d22e74028b809349b00d7c531c3b2dd5c837cd213a8faac WHIRLPOOL bdf7611557876cf86e207153c6793132511f555940f9e5ad671e4294c3a738a85e9c84c678a7daf73b863a15c7223ba7e7f4fd36c68ee3d59b3beabd7d17930a
 DIST qemu-2.0.0.tar.bz2 12839647 SHA256 60cc1aa0cad39cec891f970bed60ca8a484f071adad4943123599ac223543a3b SHA512 8fe2e8faa66251aaea7d6017ee71675d5b05f93f92be7e2ad3e1d02af185b3d6c4069bd83a13fb1e35a3e8947aff76f22446b395f97ac18b6f7a99744202e3fa WHIRLPOOL 6b39916acdcaa5e22510afec8a972935e71064de9ff0a3f9a698a8142f66b130a24d0a38cc56a7a92dbdc78d5145abe743a9c6933f819ce9e682b7cffdac1508
 DIST qemu-2.1.2.tar.bz2 23563255 SHA256 fd10f5e45cf5a736fa5a3e1c279ae9821534e700beb7d1aab88a07648a394885 SHA512 73ef758c82b23eec649c807bee8937d7fbf267278f7777adbdb22b738672543b826d211a4b523f38cee3e2b01f05ccf40a75756fc19c911362988d8e86d5cd58 WHIRLPOOL 5703d0aa8bb4366bb7aeb44fa4f3d1b54f188de42cd8c82e894584f627802b80a3dde1aa3b15fe8602a1891ec61ac66b3cd44ec031385cca88768f375c15b554
+DIST qemu-2.2.0.tar.bz2 24316697 SHA256 b68c9b6c7c694f5489b5a6bffe993cd976ffbb78e7d178eb3bc016caf460039c SHA512 c1a42cc53a01175875411cad13defaab46f97740897b89f19fbf345106534f83fc707fae4a58d890f64eea475b940b934c7531a6ed04aa01f54cadb52b0b5909 WHIRLPOOL a9cb92406d4f2cfd6b7989c9876f7df4b305083241110e7b2bf16642cfd77531c48a48753745dfeb31b9aa7d71a2d4d3f8c5aba797918c9c60e920c79066ea2d
 EBUILD qemu-guest-agent-1.5.2-r2.ebuild 2094 SHA256 8aaf6b45faf9e7771256e6fbcf34b649907709cca0f48b32636acd567fb1108a SHA512 4f296f6c45a54bad2b799a0e6287017af25310a4c42fef9643be97cd8271d3e66757c0784c9fc14b86f7d94b468c0de7206a27656460bc0c15da5a9d5324b3ee WHIRLPOOL 1d59985ba3842e33ef545b8a88cafc20d94861ecdc840fbf627d3b350695f8a096eec239eceac5c9524c05c2b5250991ae13f5b7c1d8a3bc6eddf00c18055210
 EBUILD qemu-guest-agent-1.6.0-r1.ebuild 2094 SHA256 a9896c0d769df200f8d401ba8b350ea48de16e1ed6c213054b0f10d5b411420c SHA512 bc41c9a3c987013b32b41af53e1a5b9f295b320ef21f390722e304f661f5582310f0f0107c1ef9894591c487dc9c4d118873487aabd9bd151bf752b2376b318d WHIRLPOOL 3238c2590e94572d23fa29f7c01a5523dc69935c4f108e06e1eed0219d70e0561aaa3170076c56706489b402e5515133b5a5c9f28ff34f40ad9f9d1c4ec7fdaa
 EBUILD qemu-guest-agent-2.0.0.ebuild 2157 SHA256 fbbf3f7e86df7acfcbdf66bebd7c75281ad1285f98ac334152f0ae206443540d SHA512 06892fae4039661434213efc4b6ca2d86edb2a865584df57a4a78a80d78172d9ba2ed775122c9a85bc302aa921c71d6afd1429213c68992c64b302ba870976aa WHIRLPOOL 711f1e688783b4cefb3d516b28d6283c0f6707970f5b7e286115e198dd4c8049dcb6afd023658c572b658c8d2a0fdbbb691d0db007b92916fa0d7d01abc20f19
-EBUILD qemu-guest-agent-2.1.2.ebuild 2157 SHA256 3141821094a33f4bff4be825879df2a0c44ea662c829d4549a0a9a932541755f SHA512 22f850f1a46b9efbf00ee326afd252b2c6314a0d06af313455946d6187ba7403b7f01b7718f99551db9a6235e7dcf9f2f1425a74ec70dffba4d3e84d3354844f WHIRLPOOL d44f00d8c776696e99dae73e05c447351f302379dc17327ba8b8a764985e199098cf9f27f37c05deaa9655b8ae9791c019cad6eead2c9350ac68681302844add
-MISC ChangeLog 3936 SHA256 f589b3ae27a04ce3ba8527054f3c1b3476a39398e77c891e18ae9a5c6e62bcf0 SHA512 bd5133ac663d95867966f35f879cc0f869376aca50caf5cb65becc80ad9febe8fab68aa60e740dcb548ec784067e223ad2e47023017263f139e3fa199d5e010f WHIRLPOOL 92b25b8d3066af18922955c9f985097dbb56209689441c832297c10b448f6a9d7046b6c59cae429f8f9dbdf1571b61bc034aaa411bbb69172a274722c14db91d
+EBUILD qemu-guest-agent-2.1.2.ebuild 2153 SHA256 d8c9000ab63d2f6cf32c0196efd34baa297e7ebe571ca05c90518d4525f2d20d SHA512 bc5ba915412efa0ed6d646255fcabfa30b11cd57ad88794f464d7f569c34206ed7158e20fd45a7b26f5aae04174ff2a57f9196259ae2cc74cd79f9d9784b8455 WHIRLPOOL fdebf92b9f5dd37a892e675390ef91c3c958a4d4c51b300629a632f9f26eb6709b17b5603f2fc07b29b0bbc0cfe5a007ec39f67d724b5f967140181ea8eb4359
+EBUILD qemu-guest-agent-2.2.0.ebuild 2158 SHA256 5765f6dbc5693f1ae21d877fadbaeef608e992ff11bba8f940c9f052874ce241 SHA512 9a5e5f98f4e8a6022bbdd813e295647a7fe4c2041783041e9100a2316e66e4a73802a8b962358b016b0adcfc3491a050bd7d41971b05d6666d842bff64ad9025 WHIRLPOOL 10307e364bb60814f5cc4bb010905dee2885f12a339954e787d54da9bf40d9e19676ae0057919512d852f40ebf43d3045002754ef841a5ce9800bd17b5ea2f3b
+MISC ChangeLog 4209 SHA256 27599a5478dc66afc8133625abb53bea86c7916c5a54bb35fc5e38fdd3f61476 SHA512 ee59d6ff3b3cbd0dff8c1c7fc40a27f52317b5132b1034ba5ad18caa9a549a76327f6aefa50f709b80c339a3950d2448112fd40554939694531cc473dfe73622 WHIRLPOOL efc700093b60f8a7e3a0a3641087884994fdb5e053ca6a673c751fd3fd3d508748d30b888df7001a4c48587311d52eb1eee9b3d32554565a1768276988852f5a
 MISC metadata.xml 159 SHA256 8e43977d889f37ee8d15752a31282419de943d4b9054cf18ad8bab614acb40ea SHA512 cead2f8f7d2da105876edd03227bde46859ba33222b24d12c95ef16ec8cee7af9bd11711a08113f3a32dbb413394e854b70f2b016a2885642a04eb19b8102eb2 WHIRLPOOL 0ad6667f9b8c88e94b5792004664c5cdc94d466988204729bfe4a9210952076583337b460d3d89f7c8f136c336e72fb321081b582160ab84c170a26f8832ac55
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUTLK2AAoJEPGu1DbS6WIAsfoP/RDfn9R/tMUhtJQoZvHT/H7q
-VIeEuM4SStj4VVcdG2t2sK4nxQbXtM6y/gMP6Y9jea/ylcoFx9IUhh3C1DcmC41B
-FZ1kKBu6CX0mCdhePoe5b0RPFBC4TTfpk73q6CF2t8JJOLs/jSmpkoWtdqTt9jdK
-GXEhrtXGhy83FsZcxMpBQE0yzswMYiPjAdDZRiYn6I4n8uRG+WUPI1YjbFCJo0jp
-xAgzP69O345PR9f06cQPiTVYx28ftSzIci+qpRnga/j7OxLeCu0EbpWkCgf/KnZV
-Rd/2r+JLK0b6P4PCuYapb9sfVRD+X4p53qAGLNvrMOBIyR3fX/IxJLcbLON+VyI0
-9cdq4NoU8xouyKM0rSXWOEdCSB3pwj2AJG0eGr4uSlwvOfDUXP38b6qVNKYwWq77
-XCcU5NteZKE7BUXkYSNmiMAT7jD2wUX524uGRaE9gqITiPd3cH2xiXcnGBOthIVh
-tU8J25yVMYaTj6CQuT9DETzeyw1aGpoc3PQLVTF3tt5dFvSBq4ClFz/gh+TX2QA6
-kVfSx2Cz+N2ywskBBzxZSxMX7zaa7hScQOsXoONEcxaUEgMmpoxEAqUJdBq2jSAE
-jxSu2hhh44iuzSxvvAfmBxuIZtDbTomxzUcNMogQuRub5DDD2uT3OsF4bDA89Tlm
-HzpLgJh4nBmn23pjZLOb
-=yBHa
+iQIcBAEBCAAGBQJU3/ZbAAoJEPGu1DbS6WIAYx8P/0s1BjcG+xlbiTkdbDP/IOf/
+QB/3yvE3kzk4FPj9ctWy/oGc5grVWUijGHhDIUOpMGwcUXDVlvWXptRW8w8Sa0P3
+jflTs0Y0EcfhChZ6xjhNObRM170hc0w8oPWiHZhdUJBjKeV3Zmt9OhOcUQeXlKXi
+X2I8diMHxFMywuKNIZ8Lb0Zcgqs7u9dG4K/s7kjf0hMZuB79C8NtINVe8rnhqGcq
+7zDrLzcnxFdueEEaU05majIYQ/A9DZ+o3FljwgayAbQ9CVf+yDtO+LAnNLxyQaeK
+e+YtN6kZXOZ30H1m2hzZI0M7WDJuih713QTP2pHihlRZGr+ZOkiO7+/zzJzmbgqz
+NZeYcRc6J6Dq4qMnm7IppecIBHsuoZh6JbkrBaeoiIs1e21HTYtLiYUdlt+v5m4+
+mthj0NkaJLSN5S3MFb+8HN10DuTJeQh4qJNVcKWJTgirMXp2X7P9oqUN0PqHmyu2
++UvTHscuUpbj89Xt/HhbyBveRqP/z9z9T4IbQFgSZkTJBQHYlntX2nGfXZRec+AU
+p3+SXPmUEEbFB1Ldr54lkNBLE/dx0qaj8Dj6hpf80kmuZY0GSAfXyhTjbEtNYHrh
+CN3j4tk4FkhIezmEuNtczrZ32kxg4AxTldNZ5jVy+hSiCJ9XBgtDAsE6gzJqeudr
+vT4Nc0I8SrSY7lpwy/gL
+=bru8
 -----END PGP SIGNATURE-----
