@@ -7,26 +7,26 @@ DIST UrbanTerror-4.2.017-to-4.2.018.zip 9485349 SHA256 9d8a4cb258a60b2f464daaa99
 DIST UrbanTerror-4.2.018-to-4.2.019.zip 220929569 SHA256 79f1bd49cc7c84fc7d24d7219a1057ecca932de2f583b310f40af1052b494ab1 SHA512 1ad7dd8e35daf1688f2c2919108946ae19d59c4d1e267b7186287cd9c01b373db8d4a71fa44d9bede7f964badef904ed3947ff0ab66e858d8b8c1bee6db609e0 WHIRLPOOL 85e005c52821a45f4d89acc5649de2377c6b7979fe2467b77300f6fe8f5ce190132dd723b50c4e7c6ff4a3ab0daee0eba1dbf88c2afd846159a4a6ace778c544
 DIST UrbanTerror-4.2.019-to-4.2.020.zip 11159789 SHA256 fef6c8d096912d79aee4bf8fb5d68db0c7a39c97df112190aa68e8f0ce8c5e27 SHA512 59efb23b92926b5649c324d2b4a203b4caf1b77e4d40816a49abcbc9ae92d0206123034676470bc0eab1bea62e7d384dfa566b699e9e9ffacedad0fd3900e4e8 WHIRLPOOL f7b679fca1ed15628f1cdf9d3632ffb8f37b09f1b3e095598ee3d49e119964157836650c9eaacbae7b9bc95e570556a983efee180172a1e714c9121579ccbc11
 DIST UrbanTerror-4.2.020-to-4.2.021.zip 11984899 SHA256 054437b0da8e71bbaa2d964627dd41837add365116708a29a1ae481284df17f7 SHA512 9c8774d7e6e0317f8381130870a69aecefcd9d929525d0029ed9c5dc93d19fe3f85857d0c7bc9be64e936a061b2f30a242b685df27961175670eb29a0b3b6370 WHIRLPOOL a9fee3c0fda7f688c8c5664c82e6e2a4542d1496c72ff8cd572d238fa0af63fc398b9005de54093e07781abacc678c3df4cf725b348d01d1fca59fdb4f0fcb58
-DIST UrbanTerror-4.2.021-to-4.2.022.zip 15258009 SHA256 65898bc3a9c9678f9223aa9031aef9e276fb62b40aaa6deab2df5f5ddf04fb38 SHA512 a792970f6ea193ce41cdb38632d54904c4a61a8156f0647a5cb35082c4a6602057060ad131833545a44679010edf67fb263be3f701a415c8e81e7ccb628a6505 WHIRLPOOL 30b14d895f4a5c41a044da2e8718f4f89709daee931d874214c9f2037447a171d29ab10cb259e48d74208abe5248ee3cccf07cd2edf2f6b7b3f551f177689e40
 DIST UrbanTerror-4.2.022-to-4.2.023.zip 15296685 SHA256 71d34f4245c264dd729d40cf76c1471c89606891f88fda28e007ebe6a052dde9 SHA512 2b35a34cf478939b850fd6f9b2f4a46f55259f32574799968ec4595c8e7c8930910ac6958bf03c99d63516cc4a41dbd6faaad4207326e42a19981561d25aff0e WHIRLPOOL bc13ec862ad829a5b417b114d50cc3f3dc1701b3c6fd136bafa0e2a68f0bbe44d03ea33a832e4882ab7cf63f3202b1ff6f62660bc69273542165d8e7f1e36d2f
 DIST UrbanTerror42_full017.zip 1701599483 SHA256 d7849509c91c11e986ef6d47f51e7711ec53100ff42bef44095c32d91c65d7c2 SHA512 5363a21d6e21090a823eb21b82ac089640602151292f2985b6d26fc061e891e3bcadc5b0d4751f829cf6b9fe664bc619706e0e008210734bc1ef6afea3d46f96 WHIRLPOOL ee7553949f882c795eadc36dba57c923d3c49bc768aac128bfaae999bf9466c551df71946a9e8856210e5dea42c32887cb96d30f1339bba117bf9ee0c35c7edd
+DIST UrbanTerror42_full022.zip 1924134151 SHA256 e8b0a2c3a7253c24cac4e5b24028a0c9841717ae867e74ae18a18fd9c7259fd6 SHA512 6da90696c8e0f2b5315bc2564e45e8d4ee708f5f42dc1ae26846a030798c1614ef938e0ed2028ceb69b7f5a59aa1a2310d73a20530f52be29e7c4e5819f6b290 WHIRLPOOL 9e428099bdfdad94cb554821dfd9128cd909c9c51c50b2009b8778aea69bb4be10be0c6a9299de76e60c9d5a22eb0dc06a1987f4851d360c718ed6f019554a36
 DIST urbanterror-4.2.018.tar.gz 10752968 SHA256 c1fb3eb3a1e526247352b1c6abb5432b8a9b8730731ef917e4e5d21a152fb494 SHA512 b6d306cbfeedefcc85e70a50c04e92cb509fb7e0d9b9c32dd77e287c916daa686eae3a6da8e4a9b9ad1b65b5268799ef8beb4f987b687bb5fcc05ef348872dfb WHIRLPOOL 3635c54c0e7a401d1685e6b65b2fd5afa00f3bdc86fc587b25b78be72715a318d2d2f28fe6e92b67f98b352296f5c5f79cc54688e5fd17d0ff0e3efb3f685cd0
 DIST urbanterror-4.2.021.tar.gz 12634447 SHA256 47f37bd6c98b1771be204484a93705f22e3f085aa81c63f6269953d092b88236 SHA512 914cd7020b8914ca8b62a9d121dd7895dfaa733ff6acdca93f0737a2c8e1ddb73f9ac47935af67416e32ad9ca68095819b9d84e1a6014abc7331e85c99dc79ed WHIRLPOOL 2c465c676c2c10019468cee75b7cd69803c9b1dbbabe186f762d3471f3d3d4c31d43fd1ff4e30214a8dd4044f339727222af04ab0b8d811f2c5af52cbf6f029c
 DIST urbanterror-4.2.023.tar.gz 12637911 SHA256 17c79f4ed1adc0859a20f0b19ab75f04e1e7ff518c882b5cd68199b44acff90f SHA512 c0b3fb0d53889561124ea034bd2b579c3b56489e751adf9479b86c54855b4f0917589a41caa7c1a534afee59983f77394a1c76dc92534dc84116a5566c19e8e5 WHIRLPOOL 68fa26a7a0ea19a1b7b3ced968515e1b326a9f7acabc30096b15880a772c4ca4faa764fb1fd4ab07d616718c550284af88cd03deeb8b11b7003b96336413d3ee
 DIST urbanterror.svg 1592 SHA256 0d7eb12a8fe8380e0d89199621414dd56ecdfe8a8b99eec5b95d925294521de9 SHA512 ff789b35d9b1a2282485495b0d1918c7169906aeac094e7a33c7d77cd51d4787733400e1b9851ce19b38e886508d5fdd09f6cfc96b37a5b41bd0cf403e456b98 WHIRLPOOL 281413cfeb881466c2d8b882d0aa4dcf19013630a462775345c69e78a0cb86c7efed14f5d22b453c89648da682ab5e98e3579a1c975994a8e90b9fb22c37892c
 EBUILD urbanterror-4.2.018-r1.ebuild 4111 SHA256 a5a1cc573a2140964b149c8e7d28a29c671c1327d9f15deb530b64c5779b57e8 SHA512 b64b55bb53852c7df17e237ff5654d0e4bbfa6bb965305a60067a48b476df65b2ca69f37f5e650feb5a1f7e43373dd72acb9c51e8e3021eb8ea287b676afda7c WHIRLPOOL c2d1f3da425a6b1a697e03da7b1c3b30ef8f192e472095dabef3ca266d004ae20ede1ae76c7a390aab57b00b6e5cb3fb8ed5d97ada74d0bf3891fdd7b542ad67
 EBUILD urbanterror-4.2.021.ebuild 4133 SHA256 2722db6f5b6d7c4b351b81d055430b4d4159ff6cbf90b9d7e7047c6f20686ca6 SHA512 57187a38ad2ce6069ae6ff408636f31a926306c297a81fb19a5f8c9d1fc79ed88b261b1abc4715db6b09371dbf4853ee9516fc2778dd482fccee56bc3883845d WHIRLPOOL 27da47dcf078fd058c879916b215a3e71c4b9089ea3ecced4353deac94624d0dacced55bca5bc55aed840a0a536c7ee8c388628ef32987ee105158dd99f5735b
-EBUILD urbanterror-4.2.023.ebuild 4229 SHA256 f0c93e1677810f9f1a3c720892b838922404b6576cd4fbd28d2f4c89d5c7c9f9 SHA512 7510a28571df387c43e1bc1e041bdc5e31a0f9dcc5f896814fca647397af7d4887296c90d373b8e5ffa00a6dedbb4bf7fee7f16072923ed89a3709dfe289bc15 WHIRLPOOL d299e7ad773386b2ea124135174e24b7b7e160f5ac9b388c71c912f5b39ef321bf937d784a4650c63d544f34b7f068e0e3ab35bd5374ddeea85808e76531924f
-MISC ChangeLog 9112 SHA256 bac423f383f206c88e67e7140c459ce12825421d8e1b342cb4cbddc94be98765 SHA512 22641fd042000ea855f836c00f82c70ced6e4d6c07c6db3f71c5f445fdf7d8dff4d39104d79932b93ff71b0b8a8fb998990430d618f6dcf3726d0012fba9d242 WHIRLPOOL ea26fdd7e959f201c75a94fbce4088bde15ed5d94e55ef83d889291d174178406bec9ef78887327b01697b600af91af616d9ae39dc72f950072a70863dd5a9d6
+EBUILD urbanterror-4.2.023.ebuild 4229 SHA256 e819705661845740de2afa20f46299c1043b684d005a600725bbe664e3012e29 SHA512 2f44bef4dfb48ffdac33ae298d09f87ea480b68033cfb2ec466860bf18239b5337f8571834c5dbc640c6411f3db9a8c3b0b2adbd1f66d68f60e18226fff39fc2 WHIRLPOOL 8d699a8b92b973245f282f1fc75d48101bde4101ed657149b69d0302be1da502b82e86465bec6ea255d42be197e6b69f6daf586b0c6fd1d309f1d31acce44735
+MISC ChangeLog 9229 SHA256 eefc7d27d3eee3b784bde38341c5d767447689d9a1f0bfd90e2531e905faa22c SHA512 792bd7183458f57aff22a46ff3d9404a3e85eb325f2a11d8095927ccaa9aa7fe86cb4f45b4824d619b0ac7068c9726909426c6b4fb0a0c292333cb2ed7d75f02 WHIRLPOOL 163c864f7ff1ea5cd0743aab5fdb4d67fa30aac0169e450b1a20d0071c43d6b12908a2d9e67cfc471dd990d5228f7c1bc7da55109d53c95b2ee602efd4b25423
 MISC metadata.xml 363 SHA256 d4e0fbb2e1bcace7113d5e1252be857d25b0bee8648c172da412d8a76617cfd1 SHA512 2f480263dc5a89e06a6cb2c6e98f96322da771431524200b224bb120848507c872fb9770b4b701d0e27564fa3c0083809f96f43bb3460c3d36cdf719651c3eaf WHIRLPOOL fa2507d10e2a419243d184fcda2dca63a714f78d7e7d9a560c912ba3c0764ba801548afcfc91a76c3354a3bfd61b8ff2a43e1cad11d36a46bbac7e8fb639a239
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU37+pAAoJEKDMw7q00Ii0u20H+wYXbqsAVeo2e5wzwfdDjXOb
-O+Ie1IKGQrS1kk8zZFcPa2+tqDkHw/rW1ir3Ab6zUT43XMmTfYn1r1gA472C11Cr
-6OD11Pz5J5qlVPLACriC8pPTIdaU2tk1PdnBaaB8nwfxCGlfZ1YIEk91U5hnlglQ
-EYu6U+NIygsImU5PXImzxmwzcsuu+XwOLnn7bK8Ijiw6d2vCEQplvjy7idwYS8DP
-mpxTX3EQGiZJf3By232iV6ELOH7c1I5rc/wOc1NniiMz3qZv1OF8WLM5oDv0jPnL
-JGIp4XhffsUL0r3gSdjzxqdgIEQA/Qc8LlDNnxMKIj32bn8eZr5EOEWrx0bBQxM=
-=XZAm
+iQEcBAEBCAAGBQJU3/BjAAoJEKDMw7q00Ii08F4IAMA3G5a1sjuIv75M6UFnUiKH
+nkq6O+5Zba4QQIGAboY2mjTiUJ88OjpeywBW9dB8dDCx83QHiUbrGe8xagnd0928
+5EV7BeEwfmJV2XNEVHonNRImopLBAPmzTvl2pYIUcLfLDT+z89Y98BNY4Sf9IjBh
+Ti5DKklfvj/SrSVcdVmYboq2ZFEKF61UEjOj+Xly9FLR4Z8EsrJ4X5l1Zk5is1g+
+OIkkH676sOx9+NdZDZTG0zMnVOdAiajV6B/VcoRJrKcy3zQaknzZc6WnusZl3wdz
+oqBTc2BmhJYgnpB+d12aLfwhk9Hnb77K6xtY5T0/wn3cZ6qXsv7SUMeRzM1sZXk=
+=aQN6
 -----END PGP SIGNATURE-----
