@@ -1,13 +1,13 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/urbanterror-4.2.023.ebuild,v 1.1 2015/02/14 21:37:12 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/urbanterror-4.2.023.ebuild,v 1.2 2015/02/15 01:05:06 anarchy Exp $
 
 EAPI=5
 
 inherit check-reqs eutils gnome2-utils games pax-utils
 
 ENGINE_PV=${PV}
-FULL_P=UrbanTerror42_full017
+FULL_P=UrbanTerror42_full022
 UPDATE_PV=${PV:0:3}.${FULL_P#*full}
 DESCRIPTION="Hollywood tactical shooter based on the ioquake3 engine"
 HOMEPAGE="http://www.urbanterror.info/home/"
