@@ -4,10 +4,10 @@ DESCRIPTION=QEMU Guest Agent (qemu-ga) for use when running inside a VM
 EAPI=5
 HOMEPAGE=http://wiki.qemu.org/Features/QAPI/GuestAgent
 IUSE=python_targets_python2_7
-KEYWORDS=amd64 ppc ppc64 x86 ~x86-fbsd
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=GPL-2 BSD-2
 RDEPEND=>=dev-libs/glib-2.22 !<app-emulation/qemu-1.1.1-r1 !<sys-apps/sysvinit-2.88-r5
 SLOT=0
-SRC_URI=http://wiki.qemu.org/download/qemu-2.1.2.tar.bz2
+SRC_URI=http://wiki.qemu.org/download/qemu-2.2.0.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-r1	236a8d81f730332749bd484d8b53ee91	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=d94d95b5d74ea2cba2677b814d461067
+_md5_=7431c28ba6eedcc89912c88d10898c74
