@@ -9,6 +9,6 @@ LICENSE=GPL-2 Q3AEULA-20000111 urbanterror-4.2-maps
 RDEPEND=!dedicated? ( virtual/opengl curl? ( net-misc/curl ) openal? ( media-libs/openal ) sdl? ( media-libs/libsdl[X,sound,joystick,opengl,video] ) !sdl? ( x11-libs/libX11 x11-libs/libXext x11-libs/libXxf86dga x11-libs/libXxf86vm ) vorbis? ( media-libs/libogg media-libs/libvorbis ) ) games-misc/games-envd
 RESTRICT=mirror
 SLOT=0
-SRC_URI=http://up.barbatos.fr/urt/UrbanTerror42_full017.zip https://github.com/Barbatos/ioq3-for-UrbanTerror-4/archive/release-4.2.023.tar.gz -> urbanterror-4.2.023.tar.gz http://upload.wikimedia.org/wikipedia/en/5/56/Urbanterror.svg -> urbanterror.svg http://up.barbatos.fr/urt/UrbanTerror-4.2.017-to-4.2.018.zip http://up.barbatos.fr/urt/UrbanTerror-4.2.018-to-4.2.019.zip http://up.barbatos.fr/urt/UrbanTerror-4.2.019-to-4.2.020.zip http://up.barbatos.fr/urt/UrbanTerror-4.2.020-to-4.2.021.zip http://up.barbatos.fr/urt/UrbanTerror-4.2.021-to-4.2.022.zip http://up.barbatos.fr/urt/UrbanTerror-4.2.022-to-4.2.023.zip
+SRC_URI=http://up.barbatos.fr/urt/UrbanTerror42_full022.zip https://github.com/Barbatos/ioq3-for-UrbanTerror-4/archive/release-4.2.023.tar.gz -> urbanterror-4.2.023.tar.gz http://upload.wikimedia.org/wikipedia/en/5/56/Urbanterror.svg -> urbanterror.svg http://up.barbatos.fr/urt/UrbanTerror-4.2.022-to-4.2.023.zip
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=c577d3e9a83965e081318c8990c9ad3c
+_md5_=4a1585a1d90d3d2f6c1bdcf21816ef81
