@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/urbanterror
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/ChangeLog,v 1.53 2015/02/14 21:37:12 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/urbanterror/ChangeLog,v 1.54 2015/02/15 01:05:06 anarchy Exp $
+
+  15 Feb 2015;  <anarchy@gentoo.org> urbanterror-4.2.023.ebuild:
+  seed using 4.2.022, missed initial commit update
 
 *urbanterror-4.2.023 (14 Feb 2015)
 
