@@ -1,6 +1,16 @@
 # ChangeLog for app-emulation/qemu-guest-agent
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-guest-agent/ChangeLog,v 1.18 2014/10/26 08:37:09 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu-guest-agent/ChangeLog,v 1.20 2015/02/15 01:28:57 vapier Exp $
+
+*qemu-guest-agent-2.2.0 (15 Feb 2015)
+
+  15 Feb 2015; Mike Frysinger <vapier@gentoo.org>
+  +qemu-guest-agent-2.2.0.ebuild:
+  Version bump.
+
+  15 Feb 2015; Mike Frysinger <vapier@gentoo.org>
+  qemu-guest-agent-2.1.2.ebuild:
+  Stabilize for all #538744 by Bertrand Jacquin.
 
 *qemu-guest-agent-2.1.2 (26 Oct 2014)
 
